--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -9,7 +9,7 @@ Splunk Supported Release
 Features:
 
 * Scale out capability. Deploy more than one nozzle to your cloud foundry environment for High Availability.
-* Events streamed efficiently and in a secure manner to Splunk via the HTTP Event Collector (HEC).
+* Events streamed efficiently and securely to Splunk via the HTTP Event Collector (HEC).
 * Nozzle is running multiple clients sending to HEC for concurrent streaming into Splunk for increased event throughput.
 * Custom event metadata can be sent along with PCF events for enriching data inside Splunk.
 * Log tracing feature allows correlation searching and improved results inside Splunk.
